# vvave

./: .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  .travis.yml  .travis.yml_disabled  AndroidManifest.xml  Babe.pro  CMakeLists.txt  Messages.sh  README.md  android-openssl.pri  android.qrc  babe.cpp  babe.h  gitlab-build.sh  icons.qrc  install.pri  kirigami-icons.qrc  main.cpp  main.qml  mauikit  org.kde.babe.desktop  org.kde.vvave.appdata.xml  org.kde.vvave.desktop  qml.qrc  qtquickcontrols2.conf  travis-build.sh  vvave.cpp  vvave.h  vvave.kdev4  vvave.pro  vvave_debian.tar
android/: AndroidManifest.xml  android.cpp  android.h  android.pri  build.gradle  gradle.properties  local.properties  notificationclient.cpp  notificationclient.h  qtquickcontrols2.conf
android/src/: MyService.java  NotificationClient.java  SendIntent.java
android_files/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
assets/: .directory  Babe.notifyrc  vvave.notifyrc
cmake/: FindTagLib.cmake
data_models/: db_model.qml
db/: Queries.js  collectionDB.cpp  collectionDB.h  conthread.cpp  conthread.h  script.sql
debian/: .gitlab-ci.yml  changelog  control  copyright  install  rules
functional/: test  test.cpp
icons/: Luv
icons/Luv/: index.theme
java/: notificationclient.cpp  notificationclient.h
kde/: kde.pri  kdeconnect.cpp  kdeconnect.h  notify.cpp  notify.h
kde/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
models/: baselist.cpp  baselist.h  basemodel.cpp  basemodel.h
models/albums/: albumsmodel.cpp  albumsmodel.h
models/cloud/: cloud.cpp  cloud.h
models/folders/: foldersmodel.cpp  foldersmodel.h
models/playlists/: playlistsmodel.cpp  playlistsmodel.h
models/tracks/: tracksmodel.cpp  tracksmodel.h
package/: README.md
package/archlinux/: PKGBUILD.cmake  PKGBUILD.qmake
package/debian/: changelog  control  copyright  vvave-git.substvars  watch
po/ar/: vvave.po
po/ca/: vvave.po
po/ca@valencia/: vvave.po
po/cs/: vvave.po
po/de/: vvave.po
po/en_GB/: vvave.po
po/eo/: vvave.po
po/es/: vvave.po
po/eu/: vvave.po
po/fi/: vvave.po
po/fr/: vvave.po
po/ga/: vvave.po
po/gl/: vvave.po
po/he/: vvave.po
po/hu/: vvave.po
po/ia/: vvave.po
po/it/: vvave.po
po/ja/: vvave.po
po/ka/: vvave.po
po/ko/: vvave.po
po/lt/: vvave.po
po/lv/: vvave.po
po/nl/: vvave.po
po/pl/: vvave.po
po/pt/: vvave.po
po/pt_BR/: vvave.po
po/sa/: vvave.po
po/sk/: vvave.po
po/sl/: vvave.po
po/sv/: vvave.po
po/tr/: vvave.po
po/uk/: vvave.po
po/zh_CN/: vvave.po
po/zh_TW/: vvave.po
pulpo/: .directory  enums.h  pulpo.cpp  pulpo.h  pulpo.pri  service.cpp  service.h
pulpo/services/: deezerService.cpp  deezerService.h  geniusService.cpp  geniusService.h  lastfmService.cpp  lastfmService.h  (+6 more)
screenshots/: .directory
settings/: BabeSettings.cpp  BabeSettings.h  fileloader.cpp  fileloader.h  settings.cpp  settings.h
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  vvave.cpp  vvave.h
src/android_files/: AndroidManifest.xml  build.gradle
src/assets/: vvave.notifyrc
src/db/: Queries.js  collectionDB.cpp  collectionDB.h  script.sql
src/kde/: kde.pri  notify.cpp  server.cpp  server.h
src/kde/mpris2/: mediaplayer2.cpp  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
src/macos_files/: vvave.icns
src/models/albums/: albumsmodel.cpp  albumsmodel.h
src/models/cloud/: cloud.cpp  cloud.h
src/models/folders/: foldersmodel.cpp  foldersmodel.h
src/models/playlists/: playlistsmodel.cpp  playlistsmodel.h
src/models/tracks/: overviewmodel.cpp  overviewmodel.h  tracksmodel.cpp  tracksmodel.h
src/pulpo/: enums.h  htmlparser.cpp  htmlparser.h  pulpo.cpp  pulpo.h  service.cpp  service.h
src/pulpo/services/: lastfmService.cpp  lastfmService.h  musicbrainzService.cpp  musicbrainzService.h  spotifyService.cpp  spotifyService.h
src/services/local/: artworkprovider.cpp  artworkprovider.h  metadataeditor.cpp  metadataeditor.h  player.cpp  player.h  playlist.cpp  playlist.h  powermanagementinterface.cpp  powermanagementinterface.h  taginfo.cpp  taginfo.h  trackinfo.cpp  trackinfo.h
src/services/web/: abstractmusicprovider.cpp  abstractmusicprovider.h
src/services/web/NextCloud/: nextmusic.cpp  nextmusic.h
src/services/web/Spotify/: Spotify.qml  spotify.cpp  spotify.h  spotify.html
src/utils/: Help.js  Player.js  bae.h  brain.cpp
src/view_models/BabeGrid/: BabeAlbum.qml  BabeGrid.qml
src/view_models/BabeTable/: BabeTable.qml  TableDelegate.qml  TableMenu.qml
src/widgets/: AlbumsView.qml  FloatingDisk.qml  FocusView.qml  MetadataDialog.qml  MiniMode.qml  PlaybackBar.qml  SelectionBar.qml  SleepTimerDialog.qml  TracksGroup.qml  TracksView.qml
src/widgets/BabeGrid/: BabeGrid.qml
src/widgets/BabeTable/: BabeTable.qml  TableDelegate.qml  TableMenu.qml
src/widgets/CloudView/: CloudView.qml
src/widgets/FoldersView/: FoldersView.qml
src/widgets/InfoView/: InfoView.qml  LyricsView.qml
src/widgets/MainPlaylist/: MainPlaylist.qml
src/widgets/PlaylistsView/: PlaylistsView.qml  PlaylistsViewModel.qml
src/widgets/SettingsView/: SettingsDialog.qml  ShortcutsDialog.qml
utils/: BabeIcon.qml  Help.js  Icon.qml  Icons.js  Player.js  babeconsole.cpp  babeconsole.h  bae.h  brain.cpp  brain.h  singleton.h  utils.cpp  utils.h
view_models/: BabeAlbum.qml  BabeButton.qml  BabeDelegate.qml  BabeDialog.qml  BabeGrid.qml  BabeHolder.qml  BabeList.qml  BabeNotify.qml  BabePopup.qml  BabeScrollBar.qml  BabeTable.qml  ColorTagsBar.qml  FolderPickerList.qml  ScrollHelper.qml  TableDelegate.qml  TableMenu.qml  TableMenuItem.qml
widgets/: AlbumsView.qml  ArtistsView.qml  BabeBar.qml  CollageDelegate.qml  FloatingDisk.qml  FocusView.qml  FolderPicker.qml  FoldersView.qml  InfoView.qml  LyricsView.qml  MainPlaylist.qml  PlaybackBar.qml  PlaylistMenu.qml  PlaylistViewDelegate.qml  PlaylistsView.qml  SearchTable.qml  SelectionBar.qml  SelectionBarMenu.qml  SettingsView.qml  TracksView.qml
windows_files/: README
(+89 files in other folders)
